--- a/day_1_basics.ipynb
+++ b/day_1_basics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "day-1 basics.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPR/CLDX5gYNAoe+3nOecmi",
+      "authorship_tag": "ABX9TyM2YLn+zPfNH+2tqaJPMoVS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,10 +96,33 @@
     {
       "cell_type": "code",
       "source": [
+        "print(\"General Kenobi\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iN0Gy2mLQVrd",
+        "outputId": "80ae896f-ed0a-4548-bf9b-3272786a1b7a"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "General Kenobi\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "iN0Gy2mLQVrd"
+        "id": "squa8mhLT5fN"
       },
       "execution_count": null,
       "outputs": []
