--- a/day_1_basics.ipynb
+++ b/day_1_basics.ipynb
@@ -5,7 +5,11 @@
     "colab": {
       "name": "day-1 basics.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM2YLn+zPfNH+2tqaJPMoVS",
+      "collapsed_sections": [
+        "f1DTYFOEVE6-",
+        "squa8mhLT5fN"
+      ],
+      "authorship_tag": "ABX9TyM4su0FGxxs9dwEpE14humW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +30,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/CelesTech03/Data-Analytics-Winter-2022/blob/main/day_1_basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Hello Python"
+      ],
+      "metadata": {
+        "id": "f1DTYFOEVE6-"
+      }
     },
     {
       "cell_type": "code",
@@ -117,12 +130,392 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Strings"
+      ],
+      "metadata": {
+        "id": "squa8mhLT5fN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'Hi there'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "u3_Cz4tUVB17",
+        "outputId": "42d7a39d-8e3f-467f-b3dc-e06673f230b4"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Hi there'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"General Kenobi\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "QAjLurHNVjYi",
+        "outputId": "41acfacd-65c0-4e74-9d29-d7e27cdd7697"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'General Kenobi'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"I'm nice\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "lblYZqI4VmOw",
+        "outputId": "437ff787-e26b-4083-aa5f-b7e983711bcf"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "\"I'm nice\""
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'I\\'m nice' # Escape character for apostrophe"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "11mxn50FVt-J",
+        "outputId": "558a4b24-7bbf-49da-f67c-25af00e73988"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "\"I'm nice\""
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#String Basics"
+      ],
+      "metadata": {
+        "id": "-V7k_SqVWCdf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(\"Hello There\") # Gives length of string"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dOXR1v5CWAUU",
+        "outputId": "11f66fca-e9ea-4ea7-cd1a-01ffb47ca559"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = \"General Kenobi\""
+      ],
+      "metadata": {
+        "id": "rmvnJZkYV4BL"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "CDqtAo1mVz9W",
+        "outputId": "e20aea6d-05bf-47fb-a90a-95a5f4875852"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'General Kenobi'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zDW1tRvpVBZ6",
+        "outputId": "99d0adc3-3256-4447-c2e7-2258224f5415"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "General Kenobi\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qNT5ciFjYnVw",
+        "outputId": "0dabfb05-83cc-42c1-a61a-28a32465ba00"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "14"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(\"General Kenobi\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5xM6Vr7GYnQ0",
+        "outputId": "670ab256-7af1-478b-ba54-0174fc45aafa"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "14"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#String Indexing\n",
+        "We know strings are a sequence, which means Python can use indexes to call parts of the sequence. Let's learn how this works. In Python, we use brackets [] after an object to call its index. We should also note that indexing starts at 0 for Python. Let's create a new object called s and then walk through a few examples of indexing."
+      ],
+      "metadata": {
+        "id": "ZaChtHwxY40C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "dUUBwn6FZITG",
+        "outputId": "16f5c2e0-e88e-4f9b-a25b-3c264e6e1a41"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'G'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s[6]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "HcI--ul8ZIMH",
+        "outputId": "3e2cfbf9-f362-425f-f1bb-827ae733ef35"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'l'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s[2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "SiT5ygyaZH_m",
+        "outputId": "65932f5b-68b8-4745-80e1-153da7b8f0ed"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'n'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "squa8mhLT5fN"
+        "id": "hWjlHhpJZH2U"
       },
       "execution_count": null,
       "outputs": []
