--- a/Python/Day_4_Mini_Project.ipynb
+++ b/Python/Day_4_Mini_Project.ipynb
@@ -5,8 +5,10 @@
     "colab": {
       "name": "Day 4 Mini Project.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO03MgJpCe+8lXow8GpKkIn",
+      "collapsed_sections": [
+        "wUGjOF6QtwVW"
+      ],
+      "authorship_tag": "ABX9TyMfFkUpeyKRJt7N9KYd8rjQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +57,7 @@
       "metadata": {
         "id": "ekZk0CpIwJy6"
       },
-      "execution_count": 66,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -71,13 +73,13 @@
       "metadata": {
         "id": "BT9h8iZX0hcY"
       },
-      "execution_count": 67,
+      "execution_count": 71,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Function to see if check divides evenly into num\n",
+        "# Function to see if num divides evenly into check\n",
         "def is_Divisible(num, check):\n",
         "  if (num % check) == 0:\n",
         "    print(f'{num} is divisible by {check}')\n",
@@ -87,7 +89,7 @@
       "metadata": {
         "id": "Bo3RQ87G09PI"
       },
-      "execution_count": 68,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -101,26 +103,10 @@
         "is_Divisible(num,check)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xErYfLuzx_Sq",
-        "outputId": "acd7a580-163c-4553-8daf-35e421acc6d1"
+        "id": "xErYfLuzx_Sq"
       },
-      "execution_count": 69,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter first number: 51\n",
-            "Enter second number: 51\n",
-            "51 is an odd number\n",
-            "51 is not a multiple of 4\n",
-            "51 is divisible by 51\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
