--- a/Python/Day_4_Mini_Project.ipynb
+++ b/Python/Day_4_Mini_Project.ipynb
@@ -5,10 +5,8 @@
     "colab": {
       "name": "Day 4 Mini Project.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "wUGjOF6QtwVW"
-      ],
-      "authorship_tag": "ABX9TyMfFkUpeyKRJt7N9KYd8rjQ",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMk9wF+NAHzpn9iw0NIvoTu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,6 +93,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# \"Main program\"\n",
         "num = int(input(\"Enter first number: \"))\n",
         "check = int(input(\"Enter second number: \"))\n",
         "\n",
