--- a/Python/Day_4_Mini_Project.ipynb
+++ b/Python/Day_4_Mini_Project.ipynb
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "ekZk0CpIwJy6"
       },
-      "execution_count": 70,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "BT9h8iZX0hcY"
       },
-      "execution_count": 71,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -87,7 +87,7 @@
       "metadata": {
         "id": "Bo3RQ87G09PI"
       },
-      "execution_count": 72,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -102,10 +102,26 @@
         "is_Divisible(num,check)"
       ],
       "metadata": {
-        "id": "xErYfLuzx_Sq"
+        "id": "xErYfLuzx_Sq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d1867db9-a24e-4748-bf2f-9feeae36ab38"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter first number: 160\n",
+            "Enter second number: 40\n",
+            "160 is an even number\n",
+            "160 is a multiple of 4\n",
+            "160 is divisible by 40\n"
+          ]
+        }
+      ]
     }
   ]
 }
