--- a/Python/Day_2_Basics.ipynb
+++ b/Python/Day_2_Basics.ipynb
@@ -5,11 +5,8 @@
     "colab": {
       "name": "Day 2 Basics.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "3LaR6pLa6ZA7",
-        "y2zSAB6D6isB"
-      ],
-      "authorship_tag": "ABX9TyOfDDrXfN8cm9FBg9O8H7nW",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPyi9PfaejQKAT+UhgNOVaV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +61,7 @@
           "height": 35
         },
         "id": "mgQa0kq_6i11",
-        "outputId": "aae0a48e-0273-4631-ebfc-9549fa602aad"
+        "outputId": "68b487e3-63b7-4268-c215-b435c4c0ddda"
       },
       "execution_count": null,
       "outputs": [
@@ -79,7 +76,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 2
         }
       ]
     },
@@ -95,7 +92,7 @@
           "height": 35
         },
         "id": "ws_U3H_w6izM",
-        "outputId": "18162a99-831f-4569-a600-88a103432e99"
+        "outputId": "47ef42df-7ba2-41cb-82ff-37191b45bab7"
       },
       "execution_count": null,
       "outputs": [
@@ -110,7 +107,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 3
         }
       ]
     },
@@ -125,7 +122,7 @@
           "height": 35
         },
         "id": "gMKaddK66iwy",
-        "outputId": "2cf74615-5745-4d0f-90d0-30e31af1aab8"
+        "outputId": "c2b16955-7584-456a-a7db-80debf7073f2"
       },
       "execution_count": null,
       "outputs": [
@@ -140,7 +137,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
     },
@@ -155,7 +152,7 @@
           "height": 35
         },
         "id": "aZPhODjs6iuq",
-        "outputId": "df7e536a-6295-4af2-ab56-e0a5c8f895cd"
+        "outputId": "4f2e49f7-7e27-485c-fca2-4bca9ca73fdd"
       },
       "execution_count": null,
       "outputs": [
@@ -170,7 +167,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -196,7 +193,7 @@
           "height": 35
         },
         "id": "Awdlcl036ipW",
-        "outputId": "d559ac34-f8cb-4151-efbe-d70e5e8b3e51"
+        "outputId": "9497f87c-8a5b-40ab-f341-72ddef1eba3e"
       },
       "execution_count": null,
       "outputs": [
@@ -211,7 +208,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 6
         }
       ]
     },
@@ -222,12 +219,83 @@
         "s"
       ],
       "metadata": {
+        "id": "0YOoHSo46imZ",
+        "outputId": "dc8b4b82-ff61-4a44-ec65-b95d4f64cec1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "id": "0YOoHSo46imZ",
-        "outputId": "9e9ff3d2-5d84-424d-c0d8-025cfc0ee8ec"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Hello World'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Grab everything UP TO the 3rd index\n",
+        "s[:3]"
+      ],
+      "metadata": {
+        "id": "8pxcO3bj6idS",
+        "outputId": "f2477d9d-5500-4fe6-d4c0-d3c6028a85e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Hel'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note the above slicing. Here we're telling python to grab everything every 0 up to 3. It doesn't include the 3rd index. You'll notice this a lot in Python, where statements and are usually in the context of \"up to, but not including.\""
+      ],
+      "metadata": {
+        "id": "iio4pMP28UUE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Everything\n",
+        "s[:]"
+      ],
+      "metadata": {
+        "id": "JMvfUHqu8UP2",
+        "outputId": "ffaad73c-260a-47f2-e0cf-ee65727299c7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "execution_count": null,
       "outputs": [
@@ -249,16 +317,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# Grab everything UP TO the 3rd index\n",
-        "s[:3]"
+        "# We can also use negative indexing to go backwards.\n",
+        "# Last letter (one indez behind 0 so it loops back around)\n",
+        "s[-1]"
       ],
       "metadata": {
+        "id": "_IV-2lbC8UIB",
+        "outputId": "987a0cdb-33c7-42f6-fdd0-7d0d18aee0c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "id": "8pxcO3bj6idS",
-        "outputId": "dace850f-63b2-4681-ccc4-ffe3bfc907dd"
+        }
       },
       "execution_count": null,
       "outputs": [
@@ -269,7 +338,38 @@
               "type": "string"
             },
             "text/plain": [
-              "'Hel'"
+              "'d'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Grab everything but the last letter\n",
+        "s[:-1]"
+      ],
+      "metadata": {
+        "id": "HK0rmTWV90mx",
+        "outputId": "1df893d3-09a6-4ea4-8569-e19e238be08d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Hello Worl'"
             ]
           },
           "metadata": {},
@@ -278,27 +378,17 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Note the above slicing. Here we're telling python to grab everything every 0 up to 3. It doesn't include the 3rd index. You'll notice this a lot in Python, where statements and are usually in the context of \"up to, but not including.\""
-      ],
-      "metadata": {
-        "id": "iio4pMP28UUE"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "# Everything\n",
-        "s[:]"
+        "s"
       ],
       "metadata": {
+        "id": "9qUpop9v90kV",
+        "outputId": "c7130319-2c8f-4a90-98ee-85730de19b00",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "id": "JMvfUHqu8UP2",
-        "outputId": "6c8347ee-1e81-4828-bbe0-31a926af84b5"
+        }
       },
       "execution_count": null,
       "outputs": [
@@ -320,109 +410,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# We can also use negative indexing to go backwards.\n",
-        "# Last letter (one indez behind 0 so it loops back around)\n",
-        "s[-1]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "_IV-2lbC8UIB",
-        "outputId": "fdd3dd87-dbcc-4377-fba1-87e9613f50fb"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'d'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Grab everything but the last letter\n",
-        "s[:-1]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "HK0rmTWV90mx",
-        "outputId": "dcd1490d-093e-44d0-98ec-71e8a11fc1b7"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'Hello Worl'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 14
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "s"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "9qUpop9v90kV",
-        "outputId": "d55342bf-7047-46ac-a941-4c3ebe7fd524"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'Hello World'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# We can use this to print a string backwards\n",
         "s[::-1]"
       ],
       "metadata": {
+        "id": "c8w5w9nP90iC",
+        "outputId": "4a96bd1c-1dd0-4b89-de02-34a2b58dfdaf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "id": "c8w5w9nP90iC",
-        "outputId": "ffd5e12e-c138-4a66-e86e-cd4031b486f9"
+        }
       },
       "execution_count": null,
       "outputs": [
@@ -437,7 +434,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 13
         }
       ]
     },
@@ -447,12 +444,12 @@
         "s[3:7]"
       ],
       "metadata": {
+        "id": "srRQDDyn90fv",
+        "outputId": "12f49a56-b8c3-451e-dc62-1fb0e88991a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "id": "srRQDDyn90fv",
-        "outputId": "c44d4332-83dd-427f-90b6-d24e115c9468"
+        }
       },
       "execution_count": null,
       "outputs": [
@@ -467,7 +464,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 14
         }
       ]
     },
@@ -477,12 +474,12 @@
         "s[3:7:-1]"
       ],
       "metadata": {
+        "id": "zBzXJQZ990dH",
+        "outputId": "9ca85bd5-12c4-4b19-a5be-574421e34f68",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "id": "zBzXJQZ990dH",
-        "outputId": "4dfbe37a-51e0-4a23-9252-514b1a626af2"
+        }
       },
       "execution_count": null,
       "outputs": [
@@ -497,7 +494,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 15
         }
       ]
     },
@@ -507,12 +504,12 @@
         "s[3]"
       ],
       "metadata": {
+        "id": "QFn-GaHw90Xf",
+        "outputId": "3294fb6c-1822-4a5b-b781-ee623ff43535",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "id": "QFn-GaHw90Xf",
-        "outputId": "922aa1dd-721f-47d0-d7b6-6d41be4e1ce7"
+        }
       },
       "execution_count": null,
       "outputs": [
@@ -527,7 +524,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 16
         }
       ]
     },
@@ -537,12 +534,12 @@
         "s[7]"
       ],
       "metadata": {
+        "id": "PinTeJCf90VE",
+        "outputId": "ac6496af-8a32-46f0-c33b-214442562acb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "id": "PinTeJCf90VE",
-        "outputId": "dce68731-4ba6-4c45-bc03-f0599f5e567a"
+        }
       },
       "execution_count": null,
       "outputs": [
@@ -557,7 +554,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 17
         }
       ]
     },
@@ -947,6 +944,94 @@
           "name": "stdout",
           "text": [
             "The colors are Blue Green Red\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Removing white space method\n",
+        "extra_space = \"Patient_Exam: ECG      \"\n",
+        "extra_space"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "fCU-HwEQffrC",
+        "outputId": "d86e36f8-231a-4dde-c74e-637a30eff8bb"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Patient_Exam: ECG      '"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "extra_space.rstrip()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "ROdETrs2ffmf",
+        "outputId": "2adeb01b-ef65-474d-d3d8-118f974ed755"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Patient_Exam: ECG'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# To use a variable within a message you can tell Python it’s a string by wrapping it in a str() function.\n",
+        "age = 27\n",
+        "message = \"Happy \" + str(age) + \"th Birthday!\"\n",
+        "print(message)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gzDxHMyAiR5l",
+        "outputId": "bcbb2d8d-f9a3-4752-bb1e-edd1e98df882"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Happy 27th Birthday!\n"
           ]
         }
       ]
