--- a/Python/Day_2_Collection_Data_Types.ipynb
+++ b/Python/Day_2_Collection_Data_Types.ipynb
@@ -6,7 +6,7 @@
       "name": "Day 2 Collection Data Types.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPCadXoEEnYwWTMcAvZvAuJ",
+      "authorship_tag": "ABX9TyMqZoWtciEtHdh/XslM3mRn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b2x0t6-yOHHF",
-        "outputId": "c26c2ea1-2e06-4e7a-f42c-02966c082da4"
+        "outputId": "0e9f732e-dea5-4254-b2c5-4ff2106a6559"
       },
       "execution_count": null,
       "outputs": [
@@ -66,6 +66,41 @@
     {
       "cell_type": "code",
       "source": [
+        "# You can quickly find the last element in a list by using the -1 index.\n",
+        "# You can also use –n for findings items from the end of the list.  For example movies[-3]\n",
+        "movies[-1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "G9xXlxJrX9jz",
+        "outputId": "9e1fdf43-5103-45fd-ed77-8f1998959ec4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'avengers'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Each element within a list can be accessed by telling Python its position, or index of the item.\n",
+        "# To access the element within the list, write the name of the list followed by the index in square brackets.\n",
+        "# Python considers the first item within a list to be at position 0, NOT 1\n",
         "movies[0]"
       ],
       "metadata": {
@@ -74,7 +109,7 @@
           "height": 35
         },
         "id": "2zhtFMt3OHEQ",
-        "outputId": "4832a298-f758-4b26-80f2-9f5d85620756"
+        "outputId": "24ab8a02-4c24-4170-92f9-cb7052a5a9f9"
       },
       "execution_count": null,
       "outputs": [
@@ -89,7 +124,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 4
         }
       ]
     },
@@ -321,7 +356,7 @@
     {
       "cell_type": "code",
       "source": [
-        "movies[-1] # Gets last element in the list"
+        "movies[-1] "
       ],
       "metadata": {
         "colab": {
@@ -370,7 +405,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cGlJOatjQoMt",
-        "outputId": "7f3051c6-8833-4b27-c119-8ca260809da2"
+        "outputId": "b0a6bd5a-6989-433f-bb45-ee8d8164e7f5"
       },
       "execution_count": null,
       "outputs": [
@@ -387,7 +422,7 @@
       "cell_type": "code",
       "source": [
         "movies = ['Star Wars', 'Star Trek', 'Lord of The Rings', 'Avengers']\n",
-        "movies[1] = 'The Matrix'\n",
+        "movies[1] = 'The Matrix' # Updates the element on index 1\n",
         "print(movies)"
       ],
       "metadata": {
@@ -395,7 +430,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "00d4a5bf-f971-4c3b-e6eb-d7a17dd55088"
+        "outputId": "573454cf-c72b-47e5-db15-027b2f372083"
       },
       "execution_count": null,
       "outputs": [
@@ -411,7 +446,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Append method adds a new element to the end of the list\n",
+        "# Often times, you’ll need to expand your list and add more data.  \n",
+        "# Python allows this to be done using a simple method called append().\n",
+        "# Append adds the element as the last index\n",
         "movies.append('The Purge') "
       ],
       "metadata": {
@@ -430,7 +467,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QRNS_29DdVCU",
-        "outputId": "3b2d3ac7-bbdb-4d57-c0e0-404512bad0d2"
+        "outputId": "207a062a-e015-4865-b826-2090b3c8cac1"
       },
       "execution_count": null,
       "outputs": [
@@ -442,7 +479,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 28
         }
       ]
     },
@@ -457,7 +494,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DAoNiCuzdU_6",
-        "outputId": "287027df-87dd-45c2-ff32-20b30685332c"
+        "outputId": "22df8565-9af7-4f4c-e2c7-7ce18b25cfbe"
       },
       "execution_count": null,
       "outputs": [
@@ -474,14 +511,95 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 29
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "del movies[2] # Removes an element from the list"
+        "# Python also allows you to insert elements into your list.\n",
+        "movies.insert(0, 'lion king')\n",
+        "print(movies)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I9IBXPtSlHqu",
+        "outputId": "0246f575-e6f0-4baf-de9f-7fc1df1c055a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['lion king', 'Star Wars', 'The Matrix', 'Lord of The Rings', 'Avengers', 'The Purge', 'Home Alone']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "movies2 = ['Speed', 'Archive']"
+      ],
+      "metadata": {
+        "id": "UnUtEWMnYnq4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "movies.append(movies2)"
+      ],
+      "metadata": {
+        "id": "yPbBCblJYnOx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "movies"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jR4TGGX5Yszv",
+        "outputId": "b11c7691-a949-463a-8ec7-268f58ec5874"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['lion king',\n",
+              " 'Star Wars',\n",
+              " 'The Matrix',\n",
+              " 'Lord of The Rings',\n",
+              " 'Avengers',\n",
+              " 'The Purge',\n",
+              " 'Home Alone',\n",
+              " ['Speed', 'Archive']]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# If you know which position the element you want to remove is in, you can use the del statement to remove that element.\n",
+        "del movies[2] "
       ],
       "metadata": {
         "id": "OgNv8_B4dU9k"
@@ -499,7 +617,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d1587361-e96c-4bcf-c804-4c215a8f903d"
+        "outputId": "3038b86d-f9a4-4d11-a0bf-63d9c17c76d1"
       },
       "execution_count": null,
       "outputs": [
@@ -507,18 +625,59 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['Avengers', 'Home Alone', 'Star Wars', 'The Matrix', 'The Purge']"
+              "['lion king',\n",
+              " 'Star Wars',\n",
+              " 'Lord of The Rings',\n",
+              " 'Avengers',\n",
+              " 'The Purge',\n",
+              " 'Home Alone',\n",
+              " ['Speed', 'Archive']]"
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 35
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "movies.sort() # Sorts list in alphabetical order \n",
+        "# You can also remove an element by its value\n",
+        "movies.remove('Avengers')\n",
+        "movies"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-jhbQpnmlw4g",
+        "outputId": "947cc470-b824-4ad7-fa6f-5c7960e1fd6d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['lion king',\n",
+              " 'Star Wars',\n",
+              " 'Lord of The Rings',\n",
+              " 'The Purge',\n",
+              " 'Home Alone',\n",
+              " ['Speed', 'Archive']]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Lists can be sorted using the sort() method. \n",
+        "# Sometimes, you don’t want your list to be permanently sorted – you can use the sorted() function to temporarily sort your list.\n",
+        "movies.sort() \n",
         "print(movies)"
       ],
       "metadata": {
@@ -542,7 +701,8 @@
     {
       "cell_type": "code",
       "source": [
-        "movies.sort(reverse=True) # Still alphabetical but the other way around (Z-A)\n",
+        "# Lists can also be sorted in reverse (Z-A):\n",
+        "movies.sort(reverse=True) \n",
         "print(movies)"
       ],
       "metadata": {
@@ -559,6 +719,40 @@
           "name": "stdout",
           "text": [
             "['The Purge', 'The Matrix', 'Star Wars', 'Home Alone', 'Avengers']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convert a integer number into Binary, Octal and Hexadecimal\n",
+        "num = int(input(\"Enter number: \"))\n",
+        "\n",
+        "print(f'Binary value is {bin(num)}')\n",
+        "print(f'Octal value is {oct(num)}')\n",
+        "print(f'Hexadecimal value is {hex(num)}')\n",
+        "\n",
+        "print(f'Binary value is {bin(num)}, Octal value is {oct(num)}, Hexadecimal value is {hex(num)}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ot-m_Ow-ZNf_",
+        "outputId": "ebc830ed-6421-45df-f464-083ca21f46c4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number: 500\n",
+            "Binary value is 0b111110100\n",
+            "Octal value is 0o764\n",
+            "Hexadecimal value is 0x1f4\n",
+            "Binary value is 0b111110100, Octal value is 0o764, Hexadecimal value is 0x1f4\n"
           ]
         }
       ]
