--- a/Python/Week 2/Pandas_Data_Wrangling.ipynb
+++ b/Python/Week 2/Pandas_Data_Wrangling.ipynb
@@ -6,7 +6,7 @@
       "name": "Pandas Data Wrangling.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNEgcojoifcoBNCYkz1V8Cq",
+      "authorship_tag": "ABX9TyOoKU4LMw4qWhu4hiS1F5rK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3230,7 +3230,7 @@
     {
       "cell_type": "code",
       "source": [
-        "prop2"
+        "prop2 # Cleaned Data"
       ],
       "metadata": {
         "colab": {
@@ -3470,7 +3470,7 @@
     {
       "cell_type": "code",
       "source": [
-        "prop"
+        "prop # Original Data"
       ],
       "metadata": {
         "colab": {
@@ -3702,246 +3702,6 @@
           },
           "metadata": {},
           "execution_count": 149
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "prop2"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 332
-        },
-        "id": "2l816TLjjQZp",
-        "outputId": "08a59607-3402-4735-d991-2f0b23c1cf8e"
-      },
-      "execution_count": 150,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "\n",
-              "  <div id=\"df-d679e765-4ca1-4e49-8f5b-7ad9e13fd678\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>PID</th>\n",
-              "      <th>Number</th>\n",
-              "      <th>Name</th>\n",
-              "      <th>OWN_OCCUPIED</th>\n",
-              "      <th>Num. of Bedrooms</th>\n",
-              "      <th>Num. of Baths</th>\n",
-              "      <th>SQ_FT</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>100001000.0</td>\n",
-              "      <td>104.0</td>\n",
-              "      <td>PUTNAM</td>\n",
-              "      <td>Y</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>1000.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>100002000.0</td>\n",
-              "      <td>197.0</td>\n",
-              "      <td>LEXINGTON</td>\n",
-              "      <td>N</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>1.5</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>100003000.0</td>\n",
-              "      <td>125.0</td>\n",
-              "      <td>LEXINGTON</td>\n",
-              "      <td>N</td>\n",
-              "      <td>2.5</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>850.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>100004000.0</td>\n",
-              "      <td>201.0</td>\n",
-              "      <td>BERKELEY</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>700.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>100005000.0</td>\n",
-              "      <td>203.0</td>\n",
-              "      <td>BERKELEY</td>\n",
-              "      <td>Y</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>1600.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>100006000.0</td>\n",
-              "      <td>207.0</td>\n",
-              "      <td>BERKELEY</td>\n",
-              "      <td>Y</td>\n",
-              "      <td>2.5</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>800.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>100007000.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>WASHINGTON</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>950.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>100008000.0</td>\n",
-              "      <td>213.0</td>\n",
-              "      <td>TREMONT</td>\n",
-              "      <td>Y</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>100009000.0</td>\n",
-              "      <td>215.0</td>\n",
-              "      <td>TREMONT</td>\n",
-              "      <td>Y</td>\n",
-              "      <td>2.5</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>1800.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d679e765-4ca1-4e49-8f5b-7ad9e13fd678')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-d679e765-4ca1-4e49-8f5b-7ad9e13fd678 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d679e765-4ca1-4e49-8f5b-7ad9e13fd678');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ],
-            "text/plain": [
-              "           PID  Number        Name  ... Num. of Bedrooms  Num. of Baths   SQ_FT\n",
-              "0  100001000.0   104.0      PUTNAM  ...              3.0            1.0  1000.0\n",
-              "1  100002000.0   197.0   LEXINGTON  ...              3.0            1.5     NaN\n",
-              "2  100003000.0   125.0   LEXINGTON  ...              2.5            1.0   850.0\n",
-              "3  100004000.0   201.0    BERKELEY  ...              1.0            NaN   700.0\n",
-              "4  100005000.0   203.0    BERKELEY  ...              3.0            2.0  1600.0\n",
-              "5  100006000.0   207.0    BERKELEY  ...              2.5            1.0   800.0\n",
-              "6  100007000.0     0.0  WASHINGTON  ...              2.0            NaN   950.0\n",
-              "7  100008000.0   213.0     TREMONT  ...              1.0            1.0     NaN\n",
-              "8  100009000.0   215.0     TREMONT  ...              2.5            2.0  1800.0\n",
-              "\n",
-              "[9 rows x 7 columns]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 150
         }
       ]
     },
